@@ -1,3 +1,8 @@
+2008-01-10  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/34396
+	* gfortran.dg/bounds_check_12.f90: New test.
+
 2008-01-10  Uros Bizjak  <ubizjak@gmail.com>
 
 	* gcc.target/i386/cmov7.c: Add -mbranch-cost=5 to dg-options.
